--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<header>
+<head>
     <html lang="de"></html>
     <meta charset="utf-8"/>
-    <title> kyaoq.me </title>
-</header>
-
-<head>
-    was wohl passieren wird?
+    <title>kyaoq</title>
 </head>
+
+<header>
+    Test Shit
+</header>
