--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <html lang="de"></html>
     <meta charset="utf-8"/>
-    <title>kyaoq</title>
+    <title>kyaoq.me</title>
 </head>
 
 <header>
