--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 
-<header class="title">
-    
-    <?php include_once('header.php'); ?>
-
+<header class="titel">
+    kyaoq.me
 </header>
 
 <body class="main">
