--- a/index.html
+++ b/index.html
@@ -19,17 +19,34 @@
         My stupid website i got for free.
     </div>
 
-    <picture style="display: block; margin: auto; width: 50%; text-align: center;">
-        <img src="img/akape.png" style="width: auto;">
-    </picture>
+    <div id="pictures">
+
+        <picture>
+            <img src="img/akape.png" style="width: auto;">
+        </picture>
+
+        <picture>
+            <img src="img/akape.png" style="width: auto;">
+        </picture>
+
+        <picture>
+            <img src="img/akape.png" style="width: auto;">
+        </picture>
+
+        <picture>
+            <img src="img/akape.png" style="width: auto;">
+        </picture>
+
+    </div>
+
 
 </body>
 
 <footer>
 
     <div class="article">
-        This is my first try at making a website. Maybe i will make a Blog out of this that nobody will ever use. Most
-        likely i will lose interest after tinkering with it for a little bit. Who knows. Let's see.
+        This is my first try at making a website. Maybe i will make a Blog out of this that nobody will ever use.
+        Most likely i will lose interest after tinkering with it for a little bit. Who knows. Let's see.
     </div>
 
 </footer>
