--- a/index.html
+++ b/index.html
@@ -21,19 +21,35 @@
 
     <div id="pictures">
 
-        <picture>
+        <picture class="pic">
             <img src="img/akape.png" style="width: auto;">
         </picture>
 
-        <picture>
+        <picture class="pic">
             <img src="img/akape.png" style="width: auto;">
         </picture>
 
-        <picture>
+        <picture class="pic">
             <img src="img/akape.png" style="width: auto;">
         </picture>
 
-        <picture>
+        <picture class="pic">
+            <img src="img/akape.png" style="width: auto;">
+        </picture>
+        
+        <picture class="pic">
+            <img src="img/akape.png" style="width: auto;">
+        </picture>
+
+        <picture class="pic">
+            <img src="img/akape.png" style="width: auto;">
+        </picture>
+
+        <picture class="pic">
+            <img src="img/akape.png" style="width: auto;">
+        </picture>
+
+        <picture class="pic">
             <img src="img/akape.png" style="width: auto;">
         </picture>
 
@@ -44,7 +60,7 @@
 
 <footer>
 
-    <div class="article">
+    <div id="footer">
         This is my first try at making a website. Maybe i will make a Blog out of this that nobody will ever use.
         Most likely i will lose interest after tinkering with it for a little bit. Who knows. Let's see.
     </div>
