--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>kyaoq.me</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 </head>
 
 <header class="titel">
