--- a/index.html
+++ b/index.html
@@ -12,38 +12,43 @@
 </head>
 
 <header class="titel">
+
+    <img src="favicon.ico" style="width: 50px;">
+
     kyaoq.me
 </header>
 
 <body class="main">
 
     <div id="untertitel">
-        My stupid website i got for free.
+        My stupid website I got for free.
     </div>
 
     <div id="pictures">
 
         <picture class="pic">
+
             <img src="img/akape.png" style="width: auto;">
+
+            <a href="img/akape.png" download="akape.png">
+                <button class="download">
+                    <i class="fa fa-download"></i>
+                    Download
+                </button>
+            </a>
+
         </picture>
 
     </div>
-    
-    <a href="img/akape.png" download="akape.png" class="downloadonewrap">
-    <button class="download">
-        <i class="fa fa-download"></i>
-        Download
-    </button>
-    </a>
-    
+
 </body>
 
 <footer>
 
     <div id="footer">
-        This is my first try at making a website. Maybe i will make a Blog out of this that nobody will ever use.
-        Most likely i will lose interest after tinkering with it for a little bit. Who knows. Let's see.
-        How the fuck did you find this website anyways?
+        ThIs Is my fIrst try at makIng a websIte. Maybe I will make a Blog out of thIs that nobody wIll ever use.
+        Most lIkely I wIll lose Interest after tInkerIng wIth It for a lIttle bIt. Who knows. Let's see.
+        How the fuck dId you fInd thIs websIte anyways? JoIn thIs DIscord: https://discord.gg/4Mgx4TpXP2
     </div>
 
 </footer>
