--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body class="main">
 
     <div id="untertitel">
-        My stupid website I got for free.
+        Why are you torturing me with Comic Sans, Nancy?
     </div>
 
     <div id="pictures">
@@ -46,9 +46,9 @@
 <footer>
 
     <div id="footer">
-        ThIs Is my fIrst try at makIng a websIte. Maybe I will make a Blog out of thIs that nobody wIll ever use.
-        Most lIkely I wIll lose Interest after tInkerIng wIth It for a lIttle bIt. Who knows. Let's see.
-        How the fuck dId you fInd thIs websIte anyways? JoIn thIs DIscord: https://discord.gg/4Mgx4TpXP2
+        This is my first try at making a website. Maybe I will make a Blog out of this that nobody will ever use.
+        Most likely I will lose interest after tinkering with it for a little bit. Who knows. Let's see.
+        How the fuck did you find this website anyways? Join this Discord: https://discord.gg/4Mgx4TpXP2
     </div>
 
 </footer>
