help me i am suffering what am i doing with my life

--- a/index.html
+++ b/index.html
@@ -28,9 +28,64 @@
 
         <picture class="pic">
 
+            <h3>
+                Donator: me
+            </h3>
+
             <img src="img/akape.png" style="width: auto;">
 
             <a href="img/akape.png" download="akape.png">
+                <button class="download">
+                    <i class="fa fa-download"></i>
+                    Download
+                </button>
+            </a>
+
+        </picture>
+
+        <picture class="pic">
+
+            <h3>
+                Donator: Nancy
+            </h3>
+
+            <img src="img/iu.png" style="width: auto;">
+
+            <a href="img/iu.png" download="iu.png">
+                <button class="download">
+                    <i class="fa fa-download"></i>
+                    Download
+                </button>
+            </a>
+
+        </picture>
+
+        <picture class="pic">
+
+            <h3>
+                Donator: Nancy
+            </h3>
+
+            <img src="img/wallfurby.png" style="width: auto;">
+
+            <a href="img/wallfurby.png" download="totallynotavirus.exe.png">
+                <button class="download">
+                    <i class="fa fa-download"></i>
+                    Download
+                </button>
+            </a>
+
+        </picture>
+
+        <picture class="pic">
+
+            <h3>
+                Donator: Nancy
+            </h3>
+
+            <img src="img/godisdead.png" style="width: auto;">
+
+            <a href="img/godisdead.png" download="godisdead.png">
                 <button class="download">
                     <i class="fa fa-download"></i>
                     Download
