--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div id="footer">
         This is my first try at making a website. Maybe I will make a Blog out of this that nobody will ever use.
         Most likely I will lose interest after tinkering with it for a little bit. Who knows. Let's see.
-        How the fuck did you find this website anyways? Join this Discord: https://discord.gg/4Mgx4TpXP2
+        How the fuck did you find this website anyways? Join this Discord and tell me: https://discord.gg/4Mgx4TpXP2
     </div>
 
 </footer>
