snipermonkey und footer am bodne

--- a/index.html
+++ b/index.html
@@ -11,50 +11,67 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 </head>
 
-<container id="container">
+<header id="header">
 
-    <header id="header">
+    <img src="favicon.ico" style="width: 50px;">
 
-        <img src="favicon.ico" style="width: 50px;">
+    kyaoq.me
+</header>
 
-        kyaoq.me
-    </header>
+<main id="main">
 
-    <body id="main">
+    <div id="untertitel">
+        Why are you torturing me with Comic Sans, Nancy?
+    </div>
 
-        <div id="untertitel">
-            Why are you torturing me with Comic Sans, Nancy?
-        </div>
-        
-        <div id="pictures">
+    <h3 style="display: flex; align-items: center; justify-content: center;">
+        Some Pictures:
+    </h3>
 
-            <picture class="pic">
+    <div id="pictures">
 
-                <img src="img/akape.png" style="width: auto;">
+        <picture class="pic">
 
-                <a href="img/akape.png" download="akape.png">
-                    <button class="download">
-                        <i class="fa fa-download"></i>
-                        Download
-                    </button>
-                </a>
+            <img src="img/akape.png" style="width: auto;">
 
-            </picture>
+            <a href="img/akape.png" download="akape.png">
+                <button class="button">
+                    Download
+                </button>
+            </a>
 
-        </div>
+        </picture>
 
-    </body>
+        <picture class="pic">
 
-    <footer id="footer">
+            <img src="img/snipermonkey.jpg" style="width: auto;">
 
-        <div>
-            This is my first try at making a website. Maybe I will make a Blog out of this that nobody will ever use.
-            Most likely I will lose interest after tinkering with it for a little bit. Who knows. Let's see.
-            How the fuck did you find this website anyways? Join this Discord and tell me: https://discord.gg/4Mgx4TpXP2
-        </div>
+            <a href="img/snipermonkey.jpg" download="snipermonkey.png">
+                <button class="button">
+                    Download
+                </button>
+            </a>
 
-    </footer>
+        </picture>
 
-</container>
+    </div>
+
+    <h3 style="display: flex; justify-content: center;">
+        You can play some pong here:
+    </h3>
+
+    <button class="button" style="display: flex; justify-content: center;">
+        Pong
+    </button>
+
+</main>
+
+<footer id="footer">
+
+    This is my first try at making a website. Maybe I will make a Blog out of this that nobody will ever use.
+    Most likely I will lose interest after tinkering with it for a little bit. Who knows. Let's see.
+    How the fuck did you find this website anyways? Join this Discord and tell me: https://discord.gg/4Mgx4TpXP2
+
+</footer>
 
 </html>
