--- a/index.html
+++ b/index.html
@@ -56,22 +56,20 @@
 
     </div>
 
-    <h3 style="display: flex; justify-content: center;">
+    <h3 style="display: flex; justify-content: center; align-items: center; margin-top: 50px;">
         You can play some pong here:
+        <button onclick="location.href='./pong.html'" class="button" style="margin-left: 10px">
+            Pong
+        </button>
     </h3>
 
-    <button class="button" style="display: flex; justify-content: center;">
-        Pong
-    </button>
 
 </main>
 
 <footer id="footer">
-
     This is my first try at making a website. Maybe I will make a Blog out of this that nobody will ever use.
     Most likely I will lose interest after tinkering with it for a little bit. Who knows. Let's see.
     How the fuck did you find this website anyways? Join this Discord and tell me: https://discord.gg/4Mgx4TpXP2
-
 </footer>
 
 </html>
