--- a/index.html
+++ b/index.html
@@ -67,9 +67,7 @@
 </main>
 
 <footer id="footer">
-    This is my first try at making a website. Maybe I will make a Blog out of this that nobody will ever use.
-    Most likely I will lose interest after tinkering with it for a little bit. Who knows. Let's see.
-    How the fuck did you find this website anyways? Join this Discord and tell me: https://discord.gg/4Mgx4TpXP2
+    How the fuck did you find this website? https://discord.gg/4Mgx4TpXP2
 </footer>
 
 </html>
