added button icons

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
             <a href="img/akape.png" download="akape.png">
                 <button class="button">
+                    <i class="fa fa-download"></i>
                     Download
                 </button>
             </a>
@@ -48,6 +49,7 @@
 
             <a href="img/snipermonkey.jpg" download="snipermonkey.png">
                 <button class="button">
+                    <i class="fa fa-download"></i>
                     Download
                 </button>
             </a>
